--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "angular-shopping-cart-demo",
-  "version": "1.1.0",
-  "description": "Demo of an angular shopping cart",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "Schibsted Code Test",
+  "version": "1.0.0",
+  "description": "Schibsted Code Test",
   "repository": {
     "type": "git",
-    "url": "https://github.com/drpicox/angular-shopping-cart-demo.git"
+    "url": "https://github.com/VictorDeBlas/SchibstedCodingTest"
   },
-  "author": "David Rodenas <david.rodenas@gmail.com>",
-  "license": "ISC",
+  "author": "Víctor de Blas <blasvan@gmail.com>",
   "devDependencies": {
     "browserify-ngannotate": "^1.0.1",
     "envify": "^3.4.0",
